--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
     <div id="herosection">
+
         <header id="header">
             <div class="container">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -101,11 +102,57 @@
                                             <img src="assets/img/icons/epc.png" alt="" class="img-fluid">
                                             <p class="inner-nav-title">Engineering Procurement<br>& Construction - EPC</p>
                                         </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/chemical.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Chemical Manufacturing<br>& Distribution</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/hr-solution.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">HR Solution</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/it.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Information Technology</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/media.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Media Production</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/retail.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Retail Utilities</p>
+                                        </a>
                                     </div>
 
                                 </div>
                                 <div class="tab-pane fade" id="pills-social" role="tabpanel"
-                                    aria-labelledby="pills-social-tab">...</div>
+                                    aria-labelledby="pills-social-tab">
+                                
+                                    <div class="tabpane-main">
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/csr.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">CSR - Coorporrate Social<br>Responsibility</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/integrity.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Integrity</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/value.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Values</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/sustainability.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Sustainability</p>
+                                        </a>
+                                        <a href="#" class="inner-nav-items">
+                                            <img src="assets/img/icons/empowerment.png" alt="" class="img-fluid">
+                                            <p class="inner-nav-title">Empowerment</p>
+                                        </a>
+                                        </a>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -118,6 +165,10 @@
                 </div>
             </div>
         </header>
+
+
+
+
     </div>
 
 
