--- a/index.html
+++ b/index.html
@@ -267,8 +267,10 @@
     <div id="aboutsection">
         <div class="container">
             <div class="col-md-12 abt-main">
-                <p class="top-title">About Us</p>
-                <h2 class="main-title">Grup Hexa - <span class="main-grade">Outlook</span></h2>
+                <div>
+                    <p class="top-title text-md-center">About Us</p>
+                    <h2 class="main-title">Grup Hexa - <span class="main-grade">Outlook</span></h2>
+                </div>
                 <p class="main-para">Within 2017-2027, Grup Hexa will push ahead with its strategy to develop its
                     businesses, principally in nurturing its international markets by investing in Chemical Engineering,
                     Modern Technology, Artificial Intelligence, Robotic Applications, Business Intelligence, Business
@@ -299,9 +301,11 @@
                     </div>
                     <div class="service-desc">
                         <h2 class="service-head">Engineering, Procurement & Construction</h2>
-                        <p class="service-para">Since its infrastructure has a major impact on cities, regions and their citizens, hexa E.P.C. aims for quality, technically sound, economically viable, environment-friendly and socially beneficial performance</p>
-                        <a  href="" class="service-btn">
-                            <p >Explore</p>
+                        <p class="service-para">Since its infrastructure has a major impact on cities, regions and their
+                            citizens, hexa E.P.C. aims for quality, technically sound, economically viable,
+                            environment-friendly and socially beneficial performance</p>
+                        <a href="" class="service-btn">
+                            <p>Explore</p>
                             <img src="assets/img/icons/arrow.png" alt="" class="img-fluid">
                         </a>
                     </div>
@@ -314,9 +318,11 @@
                     </div>
                     <div class="service-desc">
                         <h2 class="service-head">Engineering, Procurement & Construction</h2>
-                        <p class="service-para">Hexa b.e. develops and implements business processes, from building a feasible business model to monitoring and charting business processes and modeling organizational structures to information systems.</p>
-                        <a  href="" class="service-btn">
-                            <p >Explore</p>
+                        <p class="service-para">Hexa b.e. develops and implements business processes, from building a
+                            feasible business model to monitoring and charting business processes and modeling
+                            organizational structures to information systems.</p>
+                        <a href="" class="service-btn">
+                            <p>Explore</p>
                             <img src="assets/img/icons/arrow.png" alt="" class="img-fluid">
                         </a>
                     </div>
@@ -329,10 +335,12 @@
                     </div>
                     <div class="service-desc">
                         <h2 class="service-head">Engineering, Procurement & Construction</h2>
-                        <p class="service-para">Grup Hexa is a new-generation Oil Field Chemical manufacturer & supplier offering a complete portfolio of chemicals right from Drilling, Completion and Production. In the oil and gas industry, perfect chemistry is everything
+                        <p class="service-para">Grup Hexa is a new-generation Oil Field Chemical manufacturer & supplier
+                            offering a complete portfolio of chemicals right from Drilling, Completion and Production.
+                            In the oil and gas industry, perfect chemistry is everything
                             & Grup Hexa</p>
-                        <a  href="" class="service-btn">
-                            <p >Explore</p>
+                        <a href="" class="service-btn">
+                            <p>Explore</p>
                             <img src="assets/img/icons/arrow.png" alt="" class="img-fluid">
                         </a>
                     </div>
@@ -345,9 +353,12 @@
                     </div>
                     <div class="service-desc">
                         <h2 class="service-head">Engineering, Procurement & Construction</h2>
-                        <p class="service-para">The role of emerging technologies in enhancing the next generation is becoming increasingly significant. As the digital landscape continues to evolve, so too does the increase in modern technology. This has led to a surge in the adoption of advanced technologies to bolster modern world measures.</p>
-                        <a  href="" class="service-btn">
-                            <p >Explore</p>
+                        <p class="service-para">The role of emerging technologies in enhancing the next generation is
+                            becoming increasingly significant. As the digital landscape continues to evolve, so too does
+                            the increase in modern technology. This has led to a surge in the adoption of advanced
+                            technologies to bolster modern world measures.</p>
+                        <a href="" class="service-btn">
+                            <p>Explore</p>
                             <img src="assets/img/icons/arrow.png" alt="" class="img-fluid">
                         </a>
                     </div>
@@ -361,12 +372,155 @@
 
 
 
+    <!-- CTA SECTION -->
+
+    <div id="ctasection">
+        <div class="container">
+            <div class="back-logo">
+                <img src="assets/img/logo/cta-logo.png" alt="">
+            </div>
+            <div class="cta-main">
+                <h3 class="main-title">Connect with <span class="main-grade">Grup Hexa</span></h3>
+                <p class="main-para">We design, build and operate facilities and infrastructure that help improve daily
+                    life and mobility for all. As an investor, builder and
+                    operator of industries and infrastructure, gruphexa plays a key role
+                    in the transformation of cities, regions and community.</p>
+                <a href="" class="main-btn">Know More</a>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- Social Section -->
+
+    <div id="social-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 left">
+                    <div>
+                        <p class="top-title">Social Responsibility</p>
+                        <h3 class="main-title">Hexa <span class="main-grade">Foundation</span></h3>
+                    </div>
+                    <p class="main-para"><span>CHURNING OUT A VALUE-ADDED GENERATION</span>. The corporate world
+                        currently brings to the limelight multiple environmental, economic, and social impacts that are
+                        brought about by business operations. National and international organizations have introduced
+                        stringent policies at country and global levels to ensure that the environment is kept
+                        undisturbed while business processes unfold.</p>
+                    <a href="" class="main-btn">Know More</a>
+                </div>
+                <div class="col-12 col-md-6 right">
+                    <div class="img-div">
+                        <img src="assets/img/social-img-1.png" alt="" class="img-fluid">
+                        <img src="assets/img/social-img-2.png" alt="" class="socialimg img-fluid">
+                        <img src="assets/img/social-img-3.png" alt="" class="socialimg img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+    <!-- Blog Section -->
+
+    <div id="blogsection">
+        <div class="container">
+            <div class="blog-topsec">
+                <div class="row">
+                    <div class="col-12 col-md-6 left">
+                        <p class="top-title">Blogs</p>
+                        <h3 class="main-title">Hexa <span class="main-grade">Newsroom</span></h3>
+                    </div>
+                    <div class="col-12 col-md-6 right">
+                        <a href="" class="main-btn">More Blogs</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main">
+                <div class="blog-items">
+                    <div class="img-div">
+                        <img src="assets/img/blogs/blog-1.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="blog-desc">
+                        <div class="top-blog">
+                            <p class="main-grade">Latest News</p>
+                            <div class="cal-sec">
+                                <i class="fa-regular fa-calendar"></i>
+                                <p>20 Dec, 2024</p>
+                            </div>
+                        </div>
+                        <h4>Saudi Aramco joins global oil heavyweights in emission targets</h4>
+                        <p>The corporate world currently brings to the limelight multiple environmental, economic, and</p>
+                        <a href="" class="service-btn">Read More</a>
+                    </div>
+                </div>
+                <div class="blog-items">
+                    <div class="img-div">
+                        <img src="assets/img/blogs/blog-2.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="blog-desc">
+                        <div class="top-blog">
+                            <p class="main-grade">Latest News</p>
+                            <div class="cal-sec">
+                                <i class="fa-regular fa-calendar"></i>
+                                <p>20 Dec, 2024</p>
+                            </div>
+                        </div>
+                        <h4>Saudi Aramco joins global oil heavyweights in emission targets</h4>
+                        <p>The corporate world currently brings to the limelight multiple environmental, economic, and</p>
+                        <a href="" class="service-btn">Read More</a>
+                    </div>
+                </div>
+                <div class="blog-items">
+                    <div class="img-div">
+                        <img src="assets/img/blogs/blog-3.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="blog-desc">
+                        <div class="top-blog">
+                            <p class="main-grade">Latest News</p>
+                            <div class="cal-sec">
+                                <i class="fa-regular fa-calendar"></i>
+                                <p>20 Dec, 2024</p>
+                            </div>
+                        </div>
+                        <h4>Saudi Aramco joins global oil heavyweights in emission targets</h4>
+                        <p>The corporate world currently brings to the limelight multiple environmental, economic, and</p>
+                        <a href="" class="service-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- Bootstrap CDN SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/275b00d5ce.js" crossorigin="anonymous"></script>
 
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
