--- a/index.html
+++ b/index.html
@@ -39,9 +39,16 @@
                         <a class="navbar-brand" href="#">
                             <img src="assets/img/logo/logo.png" alt="">
                         </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"
                             aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <span class="navbar-toggler-icon">
+                                <!-- <svg class="menu-bar" width="110" height="81" viewBox="0 0 110 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path class="path-1" d="M26.4951 5.23242L104.638 5.23243" stroke="white" stroke-width="10" stroke-linecap="round"/>
+                                    <path class="path-2" d="M5.12109 40.2324L104.638 40.2324" stroke="white" stroke-width="10" stroke-linecap="round"/>
+                                    <path class="path-3" d="M47.0781 75.2324L104.637 75.2324" stroke="white" stroke-width="10" stroke-linecap="round"/>
+                                    </svg>                                     -->
+                            </span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
@@ -217,29 +224,44 @@
             </div>
         </header>
 
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo/logo.png" alt="">
                 </a>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Industries
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item innerdrop outlook-drop" href="#" data-target="innerdropdown-outlook">Outlook</a></li>
+                            <li><a class="dropdown-item innerdrop vertical-drop" href="#" data-target="innerdropdown-verticals">Verticals</a></li>
+                            <li><a class="dropdown-item innerdrop social-drop" href="#" data-target="innerdropdown-social">Social Responsibility</a></li>
                         </ul>
+
+
+                        <ul class="innerdropdown-outlook innerdrop-item dnone">
+                            <li class="dropdown-item">OUTLOOK1</li>
+                        </ul>
+                        <ul class="innerdropdown-verticals innerdrop-item dnone">
+                            <li class="dropdown-item">Verticals1</li>
+                        </ul>
+                        <ul class="innerdropdown-social innerdrop-item dnone">
+                            <li class="dropdown-item">Social1</li>
+                        </ul>
+
+
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Company
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -249,8 +271,8 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Commitment
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -264,7 +286,7 @@
                     </li>
                 </ul>
             </div>
-          </div>
+        </div>
 
 
         <div id="herobanner-section">
@@ -323,7 +345,7 @@
         <div class="container">
             <div class="col-md-12 abt-main">
                 <div>
-                    <p class="top-title text-md-center">About Us</p>
+                    <p class="top-title text-center">About Us</p>
                     <h2 class="main-title">Grup Hexa - <span class="main-grade">Outlook</span></h2>
                 </div>
                 <p class="main-para">Within 2017-2027, Grup Hexa will push ahead with its strategy to develop its
@@ -344,8 +366,8 @@
     <div id="servicesection">
         <div class="container">
             <div class="top-sec">
-                <p class="top-title">About Us</p>
-                <h2 class="main-title">Grup Hexa - <span class="main-grade">Outlook</span></h2>
+                <p class="top-title">Services</p>
+                <h2 class="main-title">Grup Hexa - <span class="main-grade">Verticals</span></h2>
             </div>
             <div class="services">
                 <div class="service-item">
@@ -467,9 +489,11 @@
                 </div>
                 <div class="col-12 col-lg-6 right">
                     <div class="img-div">
-                        <img src="assets/img/social-img-1.png" alt="" class="mg-fluid">
-                        <img src="assets/img/social-img-2.png" alt="" class="socialimg img-fluid">
-                        <img src="assets/img/social-img-3.png" alt="" class="socialimg img-fluid">
+                        <div>
+                            <img src="assets/img/social-img-1.png" alt="" class="img-fluid">
+                            <img src="assets/img/social-img-2.png" alt="" class="socialimg img-fluid">
+                            <img src="assets/img/social-img-3.png" alt="" class="socialimg img-fluid">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -632,7 +656,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-2 footer-cols">
+                        <div class="col-12 col-md-6 col-lg-2 footer-cols ps-5 ps-lg-0">
                             <h4>Usefull Links</h4>
                             <ul>
                                 <li>
@@ -652,7 +676,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-3 footer-cols">
+                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-lg-5">
                             <h4>Business</h4>
                             <ul>
                                 <li>
@@ -669,7 +693,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-3 footer-cols">
+                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-5">
                             <h4>Community</h4>
                             <ul>
                                 <li>
@@ -691,7 +715,7 @@
             </div>
             <div class="container">
                 <div class="copyright">
-                    <p>© 2024 Gruphexa. All Rights Reserved. Designed by <a href="" class="main-grade">Mentegoz
+                    <p>© 2024 Gruphexa All Rights Reserved. Designed by <a href="www.mentegoz.com" class="main-grade">Mentegoz
                             Technologies</a></p>
                     <div>
                         <a href="">
