--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
         </header>
 
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+        <div class="offcanvas offcanvas-start mobilemenu" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
                 <a class="navbar-brand" href="#">
@@ -241,20 +241,105 @@
                             Industries
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item innerdrop outlook-drop" href="#" data-target="innerdropdown-outlook">Outlook</a></li>
-                            <li><a class="dropdown-item innerdrop vertical-drop" href="#" data-target="innerdropdown-verticals">Verticals</a></li>
-                            <li><a class="dropdown-item innerdrop social-drop" href="#" data-target="innerdropdown-social">Social Responsibility</a></li>
+                            <li>
+                                <a class="dropdown-item innerdrop outlook-drop" href="#"
+                                    data-target="innerdropdown-outlook">Outlook <span>></span></a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item innerdrop vertical-drop" href="#"
+                                    data-target="innerdropdown-verticals">Verticals <span>></span></a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item innerdrop social-drop" href="#"
+                                    data-target="innerdropdown-social">Social Responsibility <span>></span></a>
+                            </li>
                         </ul>
 
 
-                        <ul class="innerdropdown-outlook innerdrop-item dnone">
-                            <li class="dropdown-item">OUTLOOK1</li>
+                        <ul class="innerdropdown-outlook innerdrop-item">
+                            <li class="dropdown-item">
+                                <a href=""><span>></span>
+                                    <p>Our Outlook & Strategic Vision</p>
+                                </a>
+                            </li>
                         </ul>
-                        <ul class="innerdropdown-verticals innerdrop-item dnone">
-                            <li class="dropdown-item">Verticals1</li>
+                        <ul class="innerdropdown-verticals innerdrop-item">
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Business Intelligence</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Engineering Procurement<br>
+                                        & Construction - EPC</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Chemical Manufacturing<br>
+                                        & Distribution</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>HR Solution</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Information Technology</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Media Production</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Retail Utilities</p>
+                                </a>
+                            </li>
                         </ul>
-                        <ul class="innerdropdown-social innerdrop-item dnone">
-                            <li class="dropdown-item">Social1</li>
+                        <ul class="innerdropdown-social innerdrop-item">
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>CSR - Coorporrate Social<br>Responsibility</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Integrity</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Values</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Sustainability</p>
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a href="">
+                                    <span>></span>
+                                    <p>Empowerment</p>
+                                </a>
+                            </li>
                         </ul>
 
 
@@ -265,9 +350,10 @@
                             Company
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Passion</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Team</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Approach</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Quality</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -276,9 +362,10 @@
                             Commitment
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Environmental Ambition</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">All Inclusive Growth</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Safely</a></li>
+                            <li><a class="dropdown-item innerdrop" href="#">Ethical Principals</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -715,7 +802,8 @@
             </div>
             <div class="container">
                 <div class="copyright">
-                    <p>© 2024 Gruphexa All Rights Reserved. Designed by <a href="www.mentegoz.com" class="main-grade">Mentegoz
+                    <p>© 2024 Gruphexa All Rights Reserved. Designed by <a href="www.mentegoz.com"
+                            class="main-grade">Mentegoz
                             Technologies</a></p>
                     <div>
                         <a href="">
