--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                         <img src="assets/img/logo/hexa-icon.svg" alt="" class="top-hexa">
                     </div>
                     <div class="service-desc">
-                        <h2 class="service-head">Engineering, Procurement & Construction</h2>
+                        <h2 class="service-head">Business Engineering</h2>
                         <p class="service-para">Hexa b.e. develops and implements business processes, from building a
                             feasible business model to monitoring and charting business processes and modeling
                             organizational structures to information systems.</p>
@@ -498,7 +498,7 @@
                         <img src="assets/img/logo/hexa-icon.svg" alt="" class="top-hexa">
                     </div>
                     <div class="service-desc">
-                        <h2 class="service-head">Engineering, Procurement & Construction</h2>
+                        <h2 class="service-head">Chemical Engineering</h2>
                         <p class="service-para">Grup Hexa is a new-generation Oil Field Chemical manufacturer & supplier
                             offering a complete portfolio of chemicals right from Drilling, Completion and Production.
                             In the oil and gas industry, perfect chemistry is everything
@@ -516,7 +516,7 @@
                         <img src="assets/img/logo/hexa-icon.svg" alt="" class="top-hexa">
                     </div>
                     <div class="service-desc">
-                        <h2 class="service-head">Engineering, Procurement & Construction</h2>
+                        <h2 class="service-head">IT Enable Service</h2>
                         <p class="service-para">The role of emerging technologies in enhancing the next generation is
                             becoming increasingly significant. As the digital landscape continues to evolve, so too does
                             the increase in modern technology. This has led to a surge in the adoption of advanced
@@ -549,7 +549,7 @@
                     life and mobility for all. As an investor, builder and
                     operator of industries and infrastructure, gruphexa plays a key role
                     in the transformation of cities, regions and community.</p>
-                <a href="" class="main-btn">Know More</a>
+                <a href="" class="main-btn">Contact Now</a>
             </div>
         </div>
     </div>
@@ -562,7 +562,7 @@
     <div id="social-section">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 left">
+                <div class="col-12 col-lg-6 left order-2 order-md-1">
                     <div>
                         <p class="top-title">Social Responsibility</p>
                         <h3 class="main-title">Hexa <span class="main-grade">Foundation</span></h3>
@@ -574,7 +574,7 @@
                         undisturbed while business processes unfold.</p>
                     <a href="" class="main-btn">Know More</a>
                 </div>
-                <div class="col-12 col-lg-6 right">
+                <div class="col-12 col-lg-6 right order-1 order-md-2">
                     <div class="img-div">
                         <div>
                             <img src="assets/img/social-img-1.png" alt="" class="img-fluid">
@@ -604,8 +604,8 @@
                         <p class="top-title">Blogs</p>
                         <h3 class="main-title">Hexa <span class="main-grade">Newsroom</span></h3>
                     </div>
-                    <div class="col-12 col-md-6 right">
-                        <a href="" class="main-btn">More Blogs</a>
+                    <div class="col-12 col-md-6 right ">
+                        <a href="" class="main-btn d-none d-md-block">More Blogs</a>
                     </div>
                 </div>
             </div>
@@ -743,7 +743,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-2 footer-cols ps-5 ps-lg-0">
+                        <div class="col-12 col-md-6 col-lg-2 footer-cols ps-md-5 ps-lg-0">
                             <h4>Usefull Links</h4>
                             <ul>
                                 <li>
@@ -763,7 +763,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-lg-5">
+                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-md-5">
                             <h4>Business</h4>
                             <ul>
                                 <li>
@@ -780,7 +780,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-5">
+                        <div class="col-12 col-md-6 col-lg-3 footer-cols ps-md-5">
                             <h4>Community</h4>
                             <ul>
                                 <li>
