--- a/index.html
+++ b/index.html
@@ -545,10 +545,7 @@
             </div>
             <div class="cta-main">
                 <h3 class="main-title">Connect with <span class="main-grade">Grup Hexa</span></h3>
-                <p class="main-para">We design, build and operate facilities and infrastructure that help improve daily
-                    life and mobility for all. As an investor, builder and
-                    operator of industries and infrastructure, gruphexa plays a key role
-                    in the transformation of cities, regions and community.</p>
+                <p class="main-para">Gruphexa transforms communities, designing, building, and operating infrastructure to enhance daily life and mobility. As investors and operators, we play a vital role in shaping cities and regions.</p>
                 <a href="" class="main-btn">Contact Now</a>
             </div>
         </div>
