--- a/bckup/about.html
+++ b/bckup/about.html
@@ -394,7 +394,7 @@
                     <div class="col-12 col-lg-6 left">
                         <div>
                             <p class="top-title text-start">About Us</p>
-                            <h2 class="main-title">Outlook & <span class="main-grade">Strategic Vision</span></h2>
+                            <h2 class="main-title">Outlook & <span class="main-grade"><br class="d-block d-md-none">Strategic Vision</span></h2>
                         </div>
                         <div>
                             <p class="main-para text-start">Within 2021-2031, Grup Hexa will push ahead with its strategy to develop its businesses, principally in nurturing its domestic markets by investing in O&G Services, Engineering & Construction, Chemical Manufacturing & Distribution, Information Technology, Business Engineering, Media, etc.</p>
